package org.example.smartHome.model;

// Enum representing the status of a smart device.
public enum DeviceStatus {
    ON, OFF
}

