@startuml

    class Customer {
        -email: String
        -password: String
        -fullName: String
        +getEmail(): String
        +getPassword(): String
    }

    class Device {
        -deviceId: String
        -model: String
        -status: DeviceStatus
        -room: String
        +getStatus(): DeviceStatus
        +setStatus(): void
    }

    enum DeviceStatus {
    ON
    OFF
    }

    Customer "1" -- "many" Device : owns
    Device --> DeviceStatus

@enduml
